// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label should not render description if not provided 1`] = `
<Label__Wrapper>
  <Label__Div
    dangerouslySetInnerHTML={
      Object {
        "__html": "label",
      }
    }
  />
</Label__Wrapper>
`;

exports[`Label should render 1`] = `
<Label__Wrapper>
  <Label__Div
    dangerouslySetInnerHTML={
      Object {
        "__html": "label",
      }
    }
  />
  <Label__Description>
    description
  </Label__Description>
</Label__Wrapper>
`;

exports[`Label should render an error when the label is not provided 1`] = `
<Label__Wrapper>
  <Label__Div
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
  />
  <Label__Description>
    description
  </Label__Description>
</Label__Wrapper>
`;
